<resources>
    <string name="app_name">square-shaped-triangle</string>
    <string name="create_account">Create Account</string>
    <string name="login_button">LOGIN</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_out_button">SIGN_OUT</string>
    <string name="register">Register</string>
    <string name="helloText">Welcome to Board Games Master!</string>
    <string name="textForRegister">You are not a member?</string>
    <string name="loginButtonText">Login</string>
    <string name="menu_profile">profile</string>
    <string name="menu_events">events</string>
    <string name="menu_my_events">my events</string>
    <string name="text_view_nickname">Nickname</string>
    <string name="hello_string">Hello There!</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="button_login">Login</string>
    <string name="button_sign_in">Sign In</string>
    <string name="button_login_with_google">Login with Google</string>
    <string name="button_login_with_facebook">Login with Facebook</string>
    <string name="game_image">Game image</string>
    <string name="players_label">Players:</string>
    <string name="time_label">Time:</string>
    <string name="age_label">Age:</string>
    <string name="categories_label">Categories</string>
    <string name="mechanicks_label">Mechanicks</string>
    <string name="dash">-</string>
    <string name="age_example">12+</string>
    <string name="time_max_example">1 hour</string>
    <string name="time_min_example">20 min</string>
    <string name="board_game_name_example">Catan</string>
    <string name="description_label">Description</string>
    <string name="boardgame_description_example">Text</string>
    <string name="year_publisher_exampler">1998</string>
    <string name="publisher_example">Catan Universe</string>
    <string name="min_players_example">2</string>
    <string name="max_players_example">8</string>
    <string name="button_favorite">Favorite games</string>
    <string name="button_my_games">My Games</string>
    <string name="button_my_events">My Events</string>
    <string name="menu_games">Games</string>
    <string name="game_small_poster">game small poster</string>
    <string name="item_game_name">Catan</string>
    <string name="button_sign_in_with_google">Sign In With Google</string>
    <string name="button_sign_in_with_facebook">Sign In With Facebook</string>
    <string name="game_year_creation">1998,</string>
    <string name="game_designer">Catan Universe</string>
    <string name="number_of_players">3-12</string>
    <string name="text_minutes">+ min</string>
    <string name="num_of_minutes">15</string>
    <string name="min_people_age">10+</string>
    <string name="event_name_example">Main event</string>
    <string name="created_by_label">created by</string>
    <string name="address_example">Minsk, street 55</string>
    <string name="creater_name_example">John Doe</string>
    <string name="date_example">01/01/2020</string>
    <string name="boardGamesCount_example">8</string>
    <string name="countOfPeople_example">7</string>
    <string name="players_on_event_label">Players on event</string>
    <string name="games_on_event_label">Games on event</string>
    <string name="button_joinEvent_label">JOIN</string>
    <string name="button_leaveEvent_label">LEAVE</string>
    <string name="button_deleteEvent_label">DELETE</string>
    <string name="time_example">11:00</string>
    <string name="name_example">Ivan Ivanov</string>
    <string name="event_name">Name</string>
    <string name="event_adress">City</string>
    <string name="num_of_games">8</string>
    <string name="num_of_joined_players">7</string>
    <string name="event_date">01/01/2000</string>
    <string name="event_time">12.00</string>
    <string name="created_by">created by</string>
    <string name="name_event_author">John Doe</string>
    <string name="button_applyEvent_label">Create</string>
</resources>
