<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


    <TextView
        android:id="@+id/gameInfoFragment_textView_min_playtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/time_min_example"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_label_playtime"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_label_playtime" />

    <TextView
        android:id="@+id/gameInfoFragment_textView_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/age_example"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_Label_age"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_Label_age" />

    <TextView
        android:id="@+id/gameInfoFragment_textView_max_playtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="@string/time_max_example"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_playtime"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_playtime" />

    <TextView
        android:id="@+id/gameInfoFragment_playtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/dash"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_textView_min_playtime"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_textView_min_playtime" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/game_image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,16:7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic[14]"
        tools:visibility="invisible" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton_addToFavorites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorPrimary"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintVertical_bias="0.232"
                app:srcCompat="@drawable/ic_icon_material_favorite_border" />

    <TextView
        android:id="@+id/gameInfoFragment_textView_GameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        tools:text="@string/board_game_name_example"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />




    <TextView
        android:id="@+id/gameInfoFragment_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description_label"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoFragment_Label_age" />

    <TextView
        android:id="@+id/gameInfoFragment_textViewl_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/boardgame_description_example"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoFragment_label_description" />

    <TextView
        android:id="@+id/gameInfoFragment_textView_yearPublisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="@string/year_publisher_exampler"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoFragment_textView_GameName" />

    <TextView
        android:id="@+id/gameInfoFragment_textView_publisher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="@string/publisher_example"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_textView_yearPublisher"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_textView_yearPublisher" />

    <TextView
        android:id="@+id/gameInfoFragment_label_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/players_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoFragment_textView_yearPublisher" />

    <TextView
        android:id="@+id/gameInfoFragment_textView_min_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="@string/min_players_example"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_label_players"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_label_players" />

    <TextView
        android:id="@+id/gameInfoFragment_textView_max_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        tools:text="@string/max_players_example"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_players"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_label_players" />

    <TextView
        android:id="@+id/gameInfoFragment_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/dash"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/gameInfoFragment_textView_min_players"
        app:layout_constraintTop_toTopOf="@+id/gameInfoFragment_label_players" />

    <TextView
        android:id="@+id/gameInfoFragment_label_playtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/time_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoFragment_label_players" />

    <TextView
        android:id="@+id/gameInfoFragment_Label_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/age_label"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/gameInfoFragment_label_playtime" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>